--- a/gb/16/3/16/n4663373.md
+++ b/gb/16/3/16/n4663373.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/s2531/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/s2531/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/s2531/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/s2531/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/s2531/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/s2531/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/s2531/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/s2531/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/s2531/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/s2531/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/s2531/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/s2531/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/s2531/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/s2531/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/s2531/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/s2531/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/s2531/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/s2531/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/s2531/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/s2531/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/s2531/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/s2531/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xsumwp3307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>持超级签证进入加拿大  有效期两年</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2016年03月16日讯】（大纪元记者周月谛多伦多报导）最新的《移民汇编》（Lexbase）显示，旅客首次用<ahref="https://github.com/s2531/djy/blob/master/gb/tag/%E8%B6%85%E7%BA%A7%E7%AD%BE%E8%AF%81.md#1">超级签证</a>入境加拿大后，签证将在两年后过期，无论持签证者本人是否在加拿大。 </p>
-<p>加拿大移民部规定，持有<ahref="https://github.com/s2531/djy/blob/master/gb/tag/%E8%B6%85%E7%BA%A7%E7%AD%BE%E8%AF%81.md#1">超级签证</a>（Super Visa）的旅客可以在10年内多次进入加拿大，第一次入境后最多住两年。相比之下，有10年<ahref="https://github.com/s2531/djy/blob/master/gb/tag/%E5%A4%9A%E6%AC%A1%E5%BE%80%E8%BF%94%E7%AD%BE%E8%AF%81.md#1">多次往返签证</a>（10-year multiple entry visa）的旅客和普通旅客第一次入境后最多呆6个月。 </p>
+<p>【大纪元2016年03月16日讯】（大纪元记者周月谛多伦多报导）最新的《移民汇编》（Lexbase）显示，旅客首次用<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E8%B6%85%E7%BA%A7%E7%AD%BE%E8%AF%81.md#1">超级签证</a>入境加拿大后，签证将在两年后过期，无论持签证者本人是否在加拿大。 </p>
+<p>加拿大移民部规定，持有<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E8%B6%85%E7%BA%A7%E7%AD%BE%E8%AF%81.md#1">超级签证</a>（Super Visa）的旅客可以在10年内多次进入加拿大，第一次入境后最多住两年。相比之下，有10年<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%A4%9A%E6%AC%A1%E5%BE%80%E8%BF%94%E7%AD%BE%E8%AF%81.md#1">多次往返签证</a>（10-year multiple entry visa）的旅客和普通旅客第一次入境后最多呆6个月。 </p>
 <p>《移民汇编》总编兼移民律师柯兰（Richard Kurland）表示，移民部的本意是允许超级签证的持有者在10年内多次进入加拿大，一共可以在加国住两年时间。然而，海关认为这种政策在实际操作当中很难执行。边境人员怎么知道旅客之前在加拿大呆了多少天？所以两年的期限是从旅客第一次入境时开始计算的。 </p>
 <p>例如，旅客用超级签证在2014年4月1日入境，3个月后离境，然后一直没有再入镜。那么超级签证将在今年4月1日过期。 </p>
 <p>柯兰说，很多人不知道这回事，也没有做好计划。记者就此事向移民部核实。截止本报截稿时，移民部没有作出回应。 </p>
@@ -23,42 +23,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/12/1/7/n3479921.md#1">加拿大超级签证效果待考 华裔忧医保费高</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/12/1/19/n3490760.md#1">实施7周 加拿大“超级签证”前途未卜</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/12/3/6/n3531583.md#1">加拿大超级签证申请增 通过率达77%</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/12/9/7/n3676936.md#1">加国超级签证8成获批 收入少是拒签主因</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/12/12/28/n3763103.md#1">加拿大超级签证 担保父母团聚 通过率近9成</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/13/7/12/n3914823.md#1">加拿大超级签证受欢迎 签发逾2万</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/14/9/21/n4253540.md#1">持超级签证为何须买旅游保险</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/15/1/20/n4346381.md#1">加父母团聚移民申请火爆 5千名额2周用罊</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/15/3/9/n4382888.md#1">政府民间齐施压 北京发10年多次往返签证给加拿大人</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/16/1/7/n4610490.md#1">1月11日英对华启用全新两年多次往返签证</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/12/1/7/n3479921.md#1">加拿大超级签证效果待考 华裔忧医保费高</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/12/1/19/n3490760.md#1">实施7周 加拿大“超级签证”前途未卜</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/12/3/6/n3531583.md#1">加拿大超级签证申请增 通过率达77%</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/12/9/7/n3676936.md#1">加国超级签证8成获批 收入少是拒签主因</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/12/12/28/n3763103.md#1">加拿大超级签证 担保父母团聚 通过率近9成</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/7/12/n3914823.md#1">加拿大超级签证受欢迎 签发逾2万</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/9/21/n4253540.md#1">持超级签证为何须买旅游保险</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/1/20/n4346381.md#1">加父母团聚移民申请火爆 5千名额2周用罊</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/3/9/n4382888.md#1">政府民间齐施压 北京发10年多次往返签证给加拿大人</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/1/7/n4610490.md#1">1月11日英对华启用全新两年多次往返签证</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/8/n11241790.md#1" target="_blank">共产暴政录：柬共屠杀300万民众及30万华人</a></li><li><a href="https://github.com/s2531/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/24/n9888525.md#1" target="_blank">从瘫痪边缘走向健康 内科医生感恩李洪志先生</a></li>
+<li><a href="https://github.com/ychojm359/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/10/n10902151.md#1" target="_blank">龙延：中共道路是魔鬼的选择</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/6/n11167851.md#1" target="_blank">天主教新闻网：中共的群体灭绝罪行</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/20/6/7/n12168723.md#1">大陆储户巨额存款频消失 涉事银行说法惹议</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/20/6/8/n12171270.md#1">韩国瑜遭罢免后狂呛人 张雅琴：跟共产党真像</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/20/6/8/n12169691.md#1">美海关查获一批中国制假钞 总值35.1万美元</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/20/6/9/n12172382.md#1">中共多架苏恺30战机入侵 台湾空军驱离</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/20/6/8/n12169437.md#1">台湾安心旅游方案出炉 自由行最高补助2千元</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/20/6/6/n12166947.md#1">韩国瑜遭罢免 杜汶泽用简体字嘲讽获爆赞</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/20/6/6/n12167087.md#1">遭罢免 韩国瑜能东山再起？台名嘴下惊人断语</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/20/6/8/n12169269.md#1">吴朋奉雨中告别式 演艺圈好友与爱犬送行</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/20/6/8/n12170284.md#1">吴尊补办延迟16年婚礼 见太太穿婚纱哽咽落泪</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/20/6/8/n12171460.md#1">郝海东效应？导演微博谈足球先生当总统遭禁</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/20/6/4/n12159940.md#1">一个庶民家族的故事 (6)没有半毛钱怎么过活? 祖父的活计</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/20/6/7/n12167819.md#1">睡觉时停止呼吸 美国男子看到无数天使唱歌</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/20/6/8/n12169940.md#1">作恶太多 康生曹轶欧夫妇生前遭索命</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/7/12/27/n1956051.md#1">城市中的神殿——另类神殿故事</a></li>
-<li><a href="https://github.com/s2531/djy/blob/master/gb/20/6/8/n12169544.md#1">西班牙特殊小镇 完全被法国领土包围</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740262.md#1">【秦鹏直播】不让戴口罩 李克强和习杠上了？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740815.md#1">【微视频】粮价涨多少？美国争论中国关税</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740248.md#1">【远见快评】美媒曝东航坠毁是人为 东航回应</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739318.md#1">备战台海 广东高层会议秘密录音曝光</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739256.md#1">李克强讲话“上墙”党媒争相报 释何信号</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/14/n13736831.md#1">11种营养和饮食 改善成人过动症</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/s2531/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/s2531/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/3/16/n4663373.htm">持超级签证进入加拿大  有效期两年</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/3/16/n4663373.htm">持超级签证进入加拿大  有效期两年</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/s2531/djy/blob/master/gb/16/3/16/n4663373.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/s2531/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/s2531/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/s2531/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/s2531/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/s2531/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xsumwp3307/djy/blob/master/gb/16/3/16/n4663373.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
